[package]
name = "drupal-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "~1.14", features = ["macros", "rt-multi-thread"] }
kube = { version = "~0.64", default-features = true, features = ["derive"] }
kube-derive = "~0.64"
kube-runtime = "~0.64"
k8s-openapi = { version = "~0.13", default-features = false, features = ["v1_22"] }
